# fpy

./: README.md  poetry.toml  pyproject.toml
fpy/: core.py  transducers.py
fpy/type_classes/: Alt.py  Functor.py  Semigroup.py
tests/: test_alt.py  test_core.py  test_fpy.py  test_functors.py  test_transducers.py
tests/type_classes/: test_semigroup.py
