[tool.poetry]
name = "fpy"
version = "0.1.0"
description = ""
authors = ["allsyed <admin@allsyed.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
black = "^22.3.0"
ipython = "^8.2.0"
pdbpp = "^0.10.3"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
